force-app/main/default/objects/Settlement__c/fields/Client_Decision__c.field-meta.xml
<CustomField>
    <fullName>Client_Decision__c</fullName>
    <label>Client Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Counter-Offered</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>