force-app/main/default/objects/Settlement__c/fields/Counter_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Date__c</fullName>
    <label>Counter Offer Date</label>
    <type>Date</type>
</CustomField>