force-app/main/default/objects/Settlement__c/fields/Offer_Number__c.field-meta.xml
<CustomField>
    <fullName>Offer_Number__c</fullName>
    <label>Offer Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>