force-app/main/default/objects/Settlement__c/fields/Offered_By__c.field-meta.xml
<CustomField>
    <fullName>Offered_By__c</fullName>
    <label>Offered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Defense Counsel</fullName>
            </value>
            <value>
                <fullName>Plaintiff (Counter)</fullName>
            </value>
            <value>
                <fullName>Mediator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>