force-app/main/default/objects/Settlement__c/fields/Offered_By_Party__c.field-meta.xml
<CustomField>
    <fullName>Offered_By_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offered By Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>